<resources>
    <string name="app_name">Jiva_Mandi_Abhinav</string>

<!--    MainActivity-->
    <string name="title">Mandi</string>
    <string name="tvSellerName">Seller Name</string>
    <string name="tvLoyalty">Loyalty Card Identifier</string>
    <string name="tvVillage">Village</string>
    <string name="tvGrossWeight">Gross Weight(in Kgs)</string>
    <string name="tvGrossPrice">Gross Price -</string>
    <string name="tvGrossTotal">INR</string>
    <string name="tvApplied">Applied Loyalty Index :</string>
    <string name="btSellMyProduce">Sell My Produce</string>

<!--    ResultActivity-->
    <string name="imageCD">Fruit Image</string>
    <string name="thank_you_message">Thank you %1$s for selling your quality produce.</string>
    <string name="thank_you_price">Please ensure you received %1$s for %2$s kgs of your produce</string>
    <string name="sell_more">Sell More</string>
</resources>